crates/aranya-policy-compiler/tests/data/functions/wrong_color_finish_invalid_call_color.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: finish function not allowed in expression
  |
6 |     return f()
  |            ^^^ function call not valid in this context
